# MVS_HugeNumberCalculator

./: .gitignore  CMakeLists.txt  README.md  main.c
DataTypes/: DoublyLinkedList.c  DoublyLinkedList.h
IHMHugeNumber/: ScanHugeNumber.c  ScanHugeNumber.h  ShowHugeNumber.c  ShowHugeNumber.h
Type/: HugeFloat.c  HugeInt.h  HugeUnsignedInt.c
UseHugeNumber/Operator/: HugeFloatOperator.c  HugeFloatOperator.h  HugeIntOperator.c  HugeIntOperator.h  HugeUnsignedIntOperator.c  HugeUnsignedIntOperator.h
UseHugeNumber/Type/: HugeFloat.h  HugeInt.c  HugeUnsignedInt.h
